added navigation components and updated  favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,46 +1,16 @@
 ---
 import PicoLayout from '../layouts/PicoLayout.astro';
 ---
-<PicoLayout title="Never tell me the odds">
-<header class="container">
-	<hgroup>
-			<h1><strong>Never Tell me the Odds!</strong></h1>
-			<h2>Hit-or-Mythra, a RP frawework using odds, not probabilities</h2>
-	</hgroup>
-	<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/">About</a></li>
-			<li><details role="list">
-				<summary aria-haspopup="listbox" role="button" class="secondary">Theme</summary>
-				<ul role="listbox">
-				  <li><a href="/" data-theme-switcher="auto">Auto</a></li>
-				  <li><a href="/" data-theme-switcher="light">Light</a></li>
-				  <li><a href="/" data-theme-switcher="dark">Dark</a></li>
-				</ul>
-			  </details></li>
-			<li><a href="/">Login</a></li>
-		</ul>
-	</nav>
-</header>
-<main class="container">
-	<p>
-		Ornare primis egestas orci turpis arcu pretium. Penatibus venenatis scelerisque nam iaculis porttitor. Fermentum, libero nisi praesent lacinia felis. Curae; elit, senectus iaculis tristique ut. Ac curabitur dis curae; tristique phasellus ultricies. Pretium enim porta aliquet risus etiam ligula tincidunt vestibulum at. Justo netus ac mus conubia. Sagittis commodo rutrum sociosqu sit interdum magna volutpat, felis tortor aenean sapien. Pulvinar quisque ultrices arcu, dapibus in eu? Non torquent tellus conubia ante?
-		</p>
-		<p>
-		Curabitur ultrices felis parturient ipsum lacinia integer cubilia dolor magnis et integer porta! Placerat fames placerat facilisi ut netus molestie felis habitant auctor imperdiet ipsum. Mollis consequat interdum justo rutrum rhoncus nec vulputate aptent turpis pretium bibendum. Sapien dictum risus iaculis cursus. Consectetur tortor fermentum mus vel commodo habitant. Aliquet fringilla montes vehicula mollis aptent.
-		</p>
-		<p>
-		Sagittis gravida nisl accumsan mus pretium fusce pulvinar phasellus donec platea. Nisi quisque pretium viverra taciti diam penatibus sed tortor mi tempor? Id, justo cras habitasse odio. Nec turpis nisi curae; conubia justo netus nulla hendrerit cras quis mus. Malesuada nostra adipiscing feugiat odio aptent. Cubilia enim magnis sed facilisis dictumst conubia integer hendrerit mauris dignissim nullam. Curae; adipiscing commodo in neque scelerisque. Egestas pellentesque convallis nunc eros justo gravida sapien vestibulum vivamus. Mollis pellentesque, rutrum cum sed senectus ac metus. Per, hac mattis phasellus mauris dictumst! Ante conubia dictum parturient proin sapien lacus hendrerit primis porttitor potenti? Integer lorem, primis vitae dictumst vestibulum ad. Ligula dapibus facilisi nascetur tristique vestibulum viverra porta aliquet montes dis. Taciti mattis inceptos massa duis consectetur!
-		</p>
-		<p>
-		Habitasse hac sociosqu magna urna blandit amet eu placerat nisl himenaeos quis. Mus augue dictumst habitasse nulla taciti nisl. Massa massa luctus tellus vulputate ultrices euismod, quam torquent ultrices amet urna sodales. Lobortis cursus cum volutpat tristique suspendisse. Fames sociis orci metus erat eget amet dictum. Pulvinar maecenas sociis quisque duis sollicitudin fusce luctus facilisi torquent duis cras. Nam laoreet lectus ultrices ridiculus. Egestas nostra rhoncus, habitant enim habitant placerat. Per vitae mi turpis sem habitant torquent nostra faucibus mauris nunc enim posuere. Et tortor et venenatis diam amet tincidunt, sollicitudin montes scelerisque platea tristique. Ridiculus, litora fusce potenti scelerisque in. Auctor quis quisque proin ipsum taciti cras aptent massa eleifend augue. Aliquam proin convallis curabitur consequat luctus curabitur lacus consequat.
-		</p>
-		<p>
-		Eu nibh lectus netus tincidunt gravida placerat dignissim! Consequat tortor aliquet aenean nibh augue ultricies velit nam maecenas rutrum habitant. Cum netus vehicula fusce justo nostra ad dui id nulla a sociosqu. Etiam habitasse; turpis pretium mollis nascetur risus massa congue adipiscing? Penatibus class porta libero quisque erat cubilia? Commodo tristique condimentum mauris pellentesque.
-		</p>
-</main>
-<footer class="container">
-	add copyright and social links...
-</footer>
+<PicoLayout title="Never tell me the odds" currentPage="/">
+	<article>
+		<h2>Lorem Ipsom</h2>
+		<p>Ornare primis egestas orci turpis arcu pretium. Penatibus venenatis scelerisque nam iaculis porttitor. Fermentum, libero nisi praesent lacinia felis. Curae; elit, senectus iaculis tristique ut. Ac curabitur dis curae; tristique phasellus ultricies. Pretium enim porta aliquet risus etiam ligula tincidunt vestibulum at. Justo netus ac mus conubia. Sagittis commodo rutrum sociosqu sit interdum magna volutpat, felis tortor aenean sapien. Pulvinar quisque ultrices arcu, dapibus in eu? Non torquent tellus conubia ante?</p>
+		<p>Curabitur ultrices felis parturient ipsum lacinia integer cubilia dolor magnis et integer porta! Placerat fames placerat facilisi ut netus molestie felis habitant auctor imperdiet ipsum. Mollis consequat interdum justo rutrum rhoncus nec vulputate aptent turpis pretium bibendum. Sapien dictum risus iaculis cursus. Consectetur tortor fermentum mus vel commodo habitant. Aliquet fringilla montes vehicula mollis aptent.</p>
+	</article>
+	<article>
+		<h2>more Lorem Ipsom</h2>
+		<p>Sagittis gravida nisl accumsan mus pretium fusce pulvinar phasellus donec platea. Nisi quisque pretium viverra taciti diam penatibus sed tortor mi tempor? Id, justo cras habitasse odio. Nec turpis nisi curae; conubia justo netus nulla hendrerit cras quis mus. Malesuada nostra adipiscing feugiat odio aptent. Cubilia enim magnis sed facilisis dictumst conubia integer hendrerit mauris dignissim nullam. Curae; adipiscing commodo in neque scelerisque. Egestas pellentesque convallis nunc eros justo gravida sapien vestibulum vivamus. Mollis pellentesque, rutrum cum sed senectus ac metus. Per, hac mattis phasellus mauris dictumst! Ante conubia dictum parturient proin sapien lacus hendrerit primis porttitor potenti? Integer lorem, primis vitae dictumst vestibulum ad. Ligula dapibus facilisi nascetur tristique vestibulum viverra porta aliquet montes dis. Taciti mattis inceptos massa duis consectetur!</p>
+		<p>Habitasse hac sociosqu magna urna blandit amet eu placerat nisl himenaeos quis. Mus augue dictumst habitasse nulla taciti nisl. Massa massa luctus tellus vulputate ultrices euismod, quam torquent ultrices amet urna sodales. Lobortis cursus cum volutpat tristique suspendisse. Fames sociis orci metus erat eget amet dictum. Pulvinar maecenas sociis quisque duis sollicitudin fusce luctus facilisi torquent duis cras. Nam laoreet lectus ultrices ridiculus. Egestas nostra rhoncus, habitant enim habitant placerat. Per vitae mi turpis sem habitant torquent nostra faucibus mauris nunc enim posuere. Et tortor et venenatis diam amet tincidunt, sollicitudin montes scelerisque platea tristique. Ridiculus, litora fusce potenti scelerisque in. Auctor quis quisque proin ipsum taciti cras aptent massa eleifend augue. Aliquam proin convallis curabitur consequat luctus curabitur lacus consequat.</p>
+		<p>Eu nibh lectus netus tincidunt gravida placerat dignissim! Consequat tortor aliquet aenean nibh augue ultricies velit nam maecenas rutrum habitant. Cum netus vehicula fusce justo nostra ad dui id nulla a sociosqu. Etiam habitasse; turpis pretium mollis nascetur risus massa congue adipiscing? Penatibus class porta libero quisque erat cubilia? Commodo tristique condimentum mauris pellentesque.</p>
+	</article>
 </PicoLayout>
