--- a/src/layouts/PicoLayout.astro
+++ b/src/layouts/PicoLayout.astro
@@ -1,8 +1,11 @@
 ---
+
+import Nav from '../components/Nav.astro';
 export interface Props{
     title: String;
+	currentPage: String;
 }
-const {title} =  Astro.props;
+const {title, currentPage} =  Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -19,6 +22,17 @@ const {title} =  Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<header class="container">
+			<Nav currentPage={currentPage}/>
+		</header>
+		<main class="container">
+			<slot />
+		</main>
+	<footer class="container">
+		<div class="grid">
+			<div>Copyright &copy 2023 Robert Folkerts</div>
+			<div>social links go here....</div>
+		</div>
+	</footer>
 	</body>
 </html>
