--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,27 +5,38 @@ import PicoLayout from '../layouts/PicoLayout.astro';
 	article.top{
 		margin-top: 0em;
 	}
+
+	div.youtube {
+		display:flex;
+		position:relative;
+		margin:0 0 1em 0; 
+		justify-content: center;
+	}
+
 </style>
-<PicoLayout title="Never tell me the odds" currentPage="/">
+<PicoLayout title="Never Tell Me the Odds" currentPage="/">
 	<article class="top">
 		<hgroup>
 			<h2>Odds, The Medical Test Paradox and Bayes Theorem</h2>
 			<p>Nerding out on youtube</p>
 		</hgroup>
-		<p>Decades ago, when I was a college student, I regularly played D&D and several other role playing games with friends.  I had greate fun,
+		<p>Decades ago, when I was a college student, I regularly played D&D and several other role playing games with friends.  I had great fun,
 			but I was never satisfied with how the probabilities worked.  I came up with a system using arctangents, but even a physics nerd
 			knew that was impractical, so I never tried to come up with a more practical system.  Recently, I watched a youtube video by 
 			<a href="https://www.youtube.com/@3blue1brown">3Blue1Brown</a>. In this, he rewrote Bayes Theorem using odds instead of probabilties.  The results 
 			were fascinating -  I had a eureka moment.
 		</p>
-		
+		<div class="youtube">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/lG4VkPoG3ko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
 		<p>The <em>eureka</em> was that all the bonuses and penalties in a game like D&D are just ways to alter the likelihood of success  when the player 'rolls to hit' 
 			with a d20.  If the odds of a hero landing a successful sword strike is 1:4, (aka 25%), how does that change if they are using a magical sword?  In D&D, a 'basic magical sword'
 			has a +1 rating.  This basically means that you ahve a +5% chance of hitting and a -5% chance of failure.  If we think in terms of odds, the odds
 			improve by a factor of about 11:9.  If we replace 'hit bonuses and penalties' by bonus factors and penalty factors, we have 
-			a mathmatically rigorous way to combine factors.
-		</p>
+			a mathmatically rigorous way to combine factors.</p>
+		<p><em>BUT,</em> we have a new rule for combining bonuses.  We don't add them, we multiply them.
+		We have computers that can do the math accurately and quickly. So the only way to make the game
+		practical is to have a computer do the math for us. </p>
 	</article>
 	<article>
 		<h2>more Lorem Ipsom</h2>
