Added text to about page.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,20 @@ import PicoLayout from "../layouts/PicoLayout.astro";
 ---
 <PicoLayout title="About Hit or Mythras" currentPage="/about">
 <article>
+<hgroup>
 <h2>About this site</h2>
-<p>not much has been said yet.</p>
+<p>The technoligies used to produce Hot or Mythras</p>
+</hgroup>
+    <li><a href="https://en.wikipedia.org/wiki/Bayes_factor">Bayes factors</a>!  Our underlying model is rigorous.  We can 'dial up to 11' and never go over 100%</li>
+    <li><img src='/postgraphile.optimized.svg' alt="postgraphile logo" style="width:32px;height:32px;" /> &nbsp; 
+        <a href="https://www.graphile.org/postgraphile/">PostGraphile</a> is a blazing fast GraphQL server to efficiently share data. </li>
+    <li><a href="https://picocss.com/">Pico.css</a>, a minimal CSS framework for semantic HTML.  This library allows for very clean page generation, which help to make the site faster and smaller.</li>
+    <li><a href="https://astro.build/">Astro</a>, a wab framework designed to make lightweight websites.  The speed of lightweight matters.  This allows us to run our servers on the 
+        edge using services like ....
+    </li>
+    <li><a href="https://www.cloudflare.com/">Cloudflare</a>, a global network that lets us distribute content all around the world.  So the 
+        web servers and libraries that you access are nearby.  On the internet, the speed of light
+        matters. So getting access to a global network of services matters if you want to be responsive.</li>
+</ul></p>
 </article>
 </PicoLayout>
