--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,21 @@ import PicoLayout from '../layouts/PicoLayout.astro';
 	}
 
 </style>
-<PicoLayout title="Never Tell Me the Odds" currentPage="/">
+<PicoLayout currentPage="/">
+	<p>Once up a time, people thought about odds, not probabilities.  In the Bible, David overcame the odds when 
+		he faced the giant Goliath.  Back in the day, rather than saying a 
+		probability of 50%, one would say 'even odds'.  Converting between odds and probalities is simple,
+		so knowing the odds gives the same information as knowing the probabilities.  Tracking the odds
+		has some significant advantages in a game.  Doubling the odds always makes sense, but doubling the
+		probability is problematic, as you realize when you are told to give 110% next time.  Giving 110% of 
+		the gas in your tank leaves you stranded with an empty tank.</p>
+	<p>Mythras, and the related games by The Design Mechanism offer an alterative to the D&D related games.  Rather
+		than focussing on character levels, these game focus on skills.  Hit or Mythas is a non-commercial attempt to 
+		replace the rules for determining probabilities with rules to determine odds.  This results in a game that
+		needs a computer to caclulate the D100 roles for success.  But after the COVID-19 lockdown, the idea off
+		a group of friends gathering online to role play has been normalized.  Hit or Mitrhas will play test 
+		how a game like Mythras can switch over to odds.
+	</p>
 	<article class="top">
 		<hgroup>
 			<h2>Odds, The Medical Test Paradox and Bayes Theorem</h2>
