--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,22 +1,23 @@
 ---
 import PicoLayout from "../layouts/PicoLayout.astro";
 ---
-<PicoLayout title="About Hit or Mythras" currentPage="/about">
+<PicoLayout currentPage="/about">
 <article>
 <hgroup>
-<h2>About this site</h2>
-<p>The technoligies used to produce Hot or Mythras</p>
+<h2>The tools used to create our site</h2>
+<p>Hit or Mythras extends proven tools to show how to use a rigorous game logic simply.</p>
 </hgroup>
-    <li><a href="https://en.wikipedia.org/wiki/Bayes_factor">Bayes factors</a>!  Our underlying model is rigorous.  We can 'dial up to 11' and never go over 100%</li>
-    <li><img src='/postgraphile.optimized.svg' alt="postgraphile logo" style="width:32px;height:32px;" /> &nbsp; 
-        <a href="https://www.graphile.org/postgraphile/">PostGraphile</a> is a blazing fast GraphQL server to efficiently share data. </li>
-    <li><a href="https://picocss.com/">Pico.css</a>, a minimal CSS framework for semantic HTML.  This library allows for very clean page generation, which help to make the site faster and smaller.</li>
-    <li><a href="https://astro.build/">Astro</a>, a wab framework designed to make lightweight websites.  The speed of lightweight matters.  This allows us to run our servers on the 
+<div class="grid">
+    <div><a href="https://en.wikipedia.org/wiki/Bayes_factor">Bayes factors</a>!  Our underlying model is rigorous.  We can 'dial up to 11' and never go over 100%.</div>
+    <div><img src='/postgraphile.optimized.svg' alt="postgraphile logo" style="width:32px;height:32px;" /> &nbsp; 
+        <a href="https://www.graphile.org/postgraphile/">PostGraphile</a> is a GraphQL server to efficiently share data.  It fully leverages the power of <a href="https://www.postgresql.org/">PostgreSQL</a>, a leading open source database.</div>
+    <div><a href="https://picocss.com/">Pico.css</a>, a minimal CSS framework for semantic HTML.  This divbrary allows for very clean page generation, which help to make the site faster and smaller.</div>
+    <div><a href="https://astro.build/">Astro</a>, a web framework designed to make lightweight websites.  The speed of lightweight matters.  This allows us to run our servers on the 
         edge using services like ....
-    </li>
-    <li><a href="https://www.cloudflare.com/">Cloudflare</a>, a global network that lets us distribute content all around the world.  So the 
+    </div>
+    <div><a href="https://www.cloudflare.com/">Cloudflare</a>, a global network that lets us distribute content all around the world.  So the 
         web servers and libraries that you access are nearby.  On the internet, the speed of light
-        matters. So getting access to a global network of services matters if you want to be responsive.</li>
-</ul></p>
+        is a key to a low latency user experience. So getting access to a global network of services helps everyone.</div>
+    </div>
 </article>
 </PicoLayout>
