Updated index page to use accordions call hero from wikimedia

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,7 +25,7 @@ function linkTo( targetPage: string){
 
 <style>
     header{
-        background-image: url("./Nicolas_Régnier_-_David_et_Goliath.jpg");
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Nicolas_R%C3%A9gnier_-_David_et_Goliath.jpg/1920px-Nicolas_R%C3%A9gnier_-_David_et_Goliath.jpg?20180402150006");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
