Use dark theme for the hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ function linkTo( targetPage: string){
   return targetPage===currentPage? "" : targetPage;
 }
 ---
-<header class="hero">
+<header class="hero"  data-theme="dark">
     <nav class="container">
         <hgroup>
         <h1><img src="./favicon.svg" alt="Millenium Flacon"/>&nbsp;Defy the odds</h1>
